--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section class="intro">
 						<header>
 							<h1></h1>
-							<p>INGENIERÍA Y ROBÓTICA EDUCATIVA </a></p>
+							<p>PBOT: INGENIERÍA Y ROBÓTICA EDUCATIVA </a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
