--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
 					<section class="intro">
 						<header>
 							<h1></h1>
-							<p>PBOT: INGENIERÍA Y ROBÓTICA EDUCATIVA </a></p>
+							<h1>PBOT</h1>
+							<p>INGENIERÍA Y ROBÓTICA EDUCATIVA</p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
 						</header>
 						<div class="content">
-							
+						<span class="image fill" data-position="center"><img src="images/pic01.png" alt="" /></span>
 						</div>
 					</section>
 
