--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							</ul>
 						</header>
 						<div class="content">
-						<span class="image fill" data-position="center"><img src="images/pic01.png" alt="" /></span>
+						<span class="image fill" data-position="center"><img src="images/1.jpg" alt="" /></span>
 						</div>
 					</section>
 
