--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						</header>
 						<div class="content">
 							<p>En un futuro cada vez más digitalizado resulta esencial tener formación en 
-								<strong> electrónica, computación y telecomunicaciones </strong>
+								<strong> electrónica, computación y telecomunicaciones. </strong>
 							</br>
 							Conocimientos que no sólo son primordiales para la vida cotidiana sino para la inserción laboral. La programación se convertirá en un segundo lenguaje en la era digital; una habilidad que permitirá conseguir trabajo y adaptarse en un mundo cada vez más competitivo.
 						</p>
@@ -84,21 +84,21 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h2>PLAN DE ESTUDIOS</h2>
+										<h2>QUÉ ENSEÑAMOS</h2>
 										<p>
 										MÓDULOS:
 									</br>
-										1_ ELECTRICIDAD Y MAGNETISMO.
+										+ ELECTRICIDAD Y MAGNETISMO.
 									</br>
-										2_ MECÁNICA Y ELECTROMECÁNICA.
+										+ MECÁNICA Y ELECTROMECÁNICA.
 									</br>
-										3_ ELECTRÓNICA.
+										+ ELECTRÓNICA.
 									</br>
-										4_ TELECOMUNICACIONES.
+										+ TELECOMUNICACIONES.
 									</br>
-										5_ INFORMÁTICA Y APPS
+										+ INFORMÁTICA Y APPS
 									</br>
-										6_ INTERNET
+										+ INTERNET Y SISTEMAS DISTRIBUIDOS
 
 										</p>
 									</header>
@@ -121,7 +121,7 @@
 									<div class="content">
 										<div class="gallery">
 											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+											<a href="https://www.linkedin.com/in/napole%C3%B3n-devesa-64342b47/"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
 										</div>
 									</div>
 								</section>
