--- a/index.html
+++ b/index.html
@@ -121,10 +121,13 @@
 										<p>
 											Equipo de ingenieros, electrónico e informático, apasionados del conocimiento y la enseñanza.
 										</p>
-										<div class="gallery">
-											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="https://www.linkedin.com/in/napole%C3%B3n-devesa-64342b47/"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
-										</div>
+										Silvio Monesterolo: Ingeniero Electrónico
+										<li><a href="" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+										</br>
+										Napoleón Devesa: Ingeniero Informático y Licenciado en Filosofía
+										<li><a href="" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+
+										
 									</div>
 								</section>
 
