--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">pbot.edun@gmail.com</a>
+									<a href="#">pbot.edu@gmail.com</a>
 								</li>
 								<li>
 									<h3>Teléfono</h3>
