--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
 											Equipo de ingenieros, electrónico e informático, apasionados del conocimiento y la enseñanza.
 										</p>
 										Silvio Monesterolo: Ingeniero Electrónico
-										<li><a href="" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+										<li><a href="https://www.linkedin.com/in/silvio-monesterolo-32888023/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 										</br>
 										Napoleón Devesa: Ingeniero Informático y Licenciado en Filosofía
-										<li><a href="" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+										<li><a href="https://www.linkedin.com/in/napole%C3%B3n-devesa-64342b47/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 
 										
 									</div>
