--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 								</section>
 
 
-							<!-- Section -->
+							<!-- Section 
 								<section>
 									<header>
 										<h2>QUÉ ENSEÑAMOS</h2>
@@ -109,7 +109,28 @@
 										</div>
 									</div>
 								</section>
-
+							-->
+							<!-- Section -->
+					<section>
+						<header>
+							<h2>QUÉ ENSEÑAMOS</h2>
+						</header>
+						<div class="content">
+							<p>
+									+ ELECTRICIDAD Y MAGNETISMO.
+									</br>
+										+ MECÁNICA Y ELECTROMECÁNICA.
+									</br>
+										+ ELECTRÓNICA.
+									</br>
+										+ TELECOMUNICACIONES.
+									</br>
+										+ INFORMÁTICA Y APPS
+									</br>
+										+ INTERNET Y SISTEMAS DISTRIBUIDOS
+						</p>
+						</div>
+					</section>
 
 							<!-- Section -->
 								<section>
