--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								</li>
 								<li>
 									<h3>Dirección</h3>
-									<span>Monroe 1367, Capital Federal</span>
+									<span>Monroe 1367, Capital Federal, Argentina</span>
 								</li>
 								<li>
 									<h3>MÁS</h3>
