--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 						<div class="content">
 							<p>Generar educación de calidad haciendo hincapié en el pensamiento científico, la programación, las matemáticas y la robótica.</p>
 
+						</section>	
+							
 							<!-- Section 
 								<section>
 																		<div class="content">
