--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
 										<h2>QUÉ ENSEÑAMOS</h2>
 										<p>
 									
-										+ ELECTRICIDAD Y MAGNETISMO.
+										+ ELECTRICIDAD Y MAGNETISMO
 									</br>
-										+ MECÁNICA Y ELECTROMECÁNICA.
+										+ MECÁNICA Y ELECTROMECÁNICA
 									</br>
-										+ ELECTRÓNICA.
+										+ ELECTRÓNICA
 									</br>
-										+ TELECOMUNICACIONES.
+										+ TELECOMUNICACIONES
 									</br>
 										+ INFORMÁTICA Y APPS
 									</br>
