--- a/index.html
+++ b/index.html
@@ -113,26 +113,28 @@
 								</section>
 							-->
 							<!-- Section -->
-					<section>
+						<section>
 						<header>
-							<h2>QUÉ ENSEÑAMOS</h2>
+								<h2>QUÉ ENSEÑAMOS</h2>
 						</header>
 						<div class="content">
 							<p>
-									+ ELECTRICIDAD Y MAGNETISMO.
-									</br>
-										+ MECÁNICA Y ELECTROMECÁNICA.
-									</br>
-										+ ELECTRÓNICA.
-									</br>
-										+ TELECOMUNICACIONES.
-									</br>
-										+ INFORMÁTICA Y APPS
-									</br>
-										+ INTERNET Y SISTEMAS DISTRIBUIDOS
-						</p>
+							Nos focalizamos en los siguientes módulos de estudio. En cada módulo se realiza un trabajo final práctico dónde se ponen en juego todos los conocimientos aprendidos,
+							</p>
+							<ul class="feature-icons">
+								<li class="icon solid fa-bolt">Electricidad</li>
+								<li class="icon solid fa-cog">Mecánica</li>
+								<li class="icon solid fa-microchip">Electrónica</li>
+								<li class="icon solid fa-satellite">Telecomunicaciones</li>
+								<li class="icon solid fa-code">Informática y apps</li>
+								<li class="icon solid fa-wifi">Internet y sistemas distribuidos</li>
+
+								
+							</ul>
+						
 						</div>
 					</section>
+
 
 							<!-- Section -->
 								<section>
