--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 						</header>
 						<div class="content">
 							<p>
-							Nos focalizamos en los siguientes módulos de estudio. En cada módulo se realiza un trabajo final práctico dónde se ponen en juego todos los conocimientos aprendidos,
+							Nos focalizamos en los siguientes módulos de estudio. En cada módulo se realiza un trabajo final práctico dónde se ponen en juego todos los conocimientos aprendidos:
 							</p>
 							<ul class="feature-icons">
 								<li class="icon solid fa-bolt">Electricidad</li>
