--- a/index.html
+++ b/index.html
@@ -453,11 +453,11 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">pbot.edu@gmail.com</a>
+									<a href="">pbot.edu@gmail.com</a>
 								</li>
 								<li>
 									<h3>Teléfono</h3>
-									<a href="#">(+54) 911 7363 9001</a>
+									<a href="">(+54) 911 7363 9001</a>
 								</li>
 								<li>
 									<h3>Dirección</h3>
